[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "px-proxy"
version = "0.10.3"
description = "An HTTP proxy server to automatically authenticate through an NTLM proxy"
authors = [
  {name = "Ganesh Viswanathan", email = "dev@genotrance.com"}
]
readme = "README.md"
classifiers = [
        "Development Status :: 4 - Beta",
        "Environment :: Win32 (MS Windows)",
        "Environment :: MacOS X",
        "Intended Audience :: Developers",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: System Administrators",
        "License :: OSI Approved :: MIT License",
        "Natural Language :: English",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Internet :: Proxy Servers"
]
dependencies = [
    "keyring",
    "netaddr",
    "psutil",
    "pymcurl",
    "pyspnego",
    "python-dotenv",
    "quickjs-ng"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/genotrance/px"
Repository = "https://github.com/genotrance/px"
Issues = "https://github.com/genotrance/px/issues"

[project.scripts]
px = "px.main:main"

[project.gui-scripts]
pxw = "px.main:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
    "pytest-httpbin",
    "pytest-cov",
    "pre-commit>=4.5.1",
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]

[tool.setuptools]
packages = ["px"]

[tool.tox]
envlist = ["py310", "py311", "py312", "py313", "py314", "binary"]

[tool.tox.env_run_base]
commands_pre = [["uv", "pip", "install", "keyring", "psutil", "pytest", "pytest-xdist", "pytest-httpbin"]]
commands = [["pytest", "-n", "4", "tests/test_proxy.py"], ["pytest", "-n", "4", "tests/test_config.py"]]
passenv = ["DBUS_SESSION_BUS_ADDRESS", "UV_PYTHON_PREFERENCE"]

[tool.tox.env.binary]
passenv = ["PXBIN", "DBUS_SESSION_BUS_ADDRESS"]

[tool.mypy]
files = ["px"]
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["px.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E", "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["A001", "B011", "B018", "C901", "F403", "F405", "RUF005", "RUF059", "S101", "S105", "S602", "S605", "SIM105", "SIM115", "TRY003", "TRY300"]
# config.py has complex config parsing, singleton pattern, keyring access, bare excepts
"px/config.py" = ["A001", "A002", "B904", "C901", "E722", "F841", "RUF012", "RUF015", "S105", "S106", "S110", "SIM102", "SIM105", "SIM108", "SIM210", "TRY002", "TRY003", "UP031"]
# handler.py has complex proxy/auth logic, monkey patching, bare excepts
"px/handler.py" = ["A002", "B904", "C901", "E402", "E722", "F401", "F841", "RUF012", "RUF059", "S105", "S106", "S303", "S324", "SIM102", "SIM108", "TRY002", "TRY003", "UP031"]
# main.py has complex process/socket management, bare excepts
"px/main.py" = ["A002", "B904", "C901", "E722", "F841", "SIM102", "SIM108", "TRY002", "TRY003", "UP031"]
# wproxy.py has complex proxy detection, ctypes, bare excepts
"px/wproxy.py" = ["B904", "C416", "C901", "E722", "F841", "RUF059", "SIM102", "SIM108", "TRY002", "TRY003", "TRY201", "UP031"]
# pac.py has quickjs integration
"px/pac.py" = ["B904", "C901", "TRY002", "TRY003", "UP031"]
# debug.py has bare excepts for resilient logging
"px/debug.py" = ["E722", "S110", "SIM102", "SIM105", "SIM115", "UP031"]
# windows.py has ctypes/registry access
"px/windows.py" = ["B904", "SIM115", "TRY002", "TRY003"]
# test.py is a legacy test script
"test.py" = ["A001", "B018", "B904", "C405", "C901", "E712", "E722", "E741", "F841", "S101", "S105", "S106", "S110", "S602", "S603", "S605", "S607", "SIM102", "SIM105", "SIM108", "SIM115", "TRY002", "TRY003", "UP031"]
# build/tools scripts use subprocess, eval, etc.
"tools.py" = ["A001", "A002", "B904", "C901", "E722", "F841", "RUF059", "S101", "S102", "S103", "S105", "S106", "S110", "S310", "S602", "S603", "S605", "S607", "SIM102", "SIM103", "SIM105", "SIM108", "SIM110", "SIM115", "TRY002", "TRY003", "UP031"]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["px"]
